--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,5 @@
 4. Make the Cosmic strings page a form
 5. Add more scripts
 6. An option to highlight triangles in the tonnetz
+7. Add partials to puredata patch
+8. Add sliders for boid parameters
